--- a/interfaces/paciente_view.ui
+++ b/interfaces/paciente_view.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MainWindow</class>
- <widget class="QMainWindow" name="MainWindow">
+ <class>pacientes_view</class>
+ <widget class="QMainWindow" name="pacientes_view">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>943</width>
-    <height>578</height>
+    <height>612</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -70,7 +70,7 @@ background-color:gray;
           </font>
          </property>
          <property name="currentIndex">
-          <number>1</number>
+          <number>0</number>
          </property>
          <property name="documentMode">
           <bool>true</bool>
@@ -175,13 +175,13 @@ QLabel{
                  <widget class="QComboBox" name="filtro">
                   <property name="minimumSize">
                    <size>
-                    <width>200</width>
+                    <width>300</width>
                     <height>40</height>
                    </size>
                   </property>
                   <property name="maximumSize">
                    <size>
-                    <width>200</width>
+                    <width>300</width>
                     <height>40</height>
                    </size>
                   </property>
@@ -334,7 +334,58 @@ QLabel{
                   <number>0</number>
                  </property>
                  <item>
-                  <widget class="QTableWidget" name="tabla_p"/>
+                  <widget class="QTableWidget" name="tabla_p">
+                   <attribute name="horizontalHeaderMinimumSectionSize">
+                    <number>100</number>
+                   </attribute>
+                   <attribute name="horizontalHeaderDefaultSectionSize">
+                    <number>200</number>
+                   </attribute>
+                   <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+                    <bool>false</bool>
+                   </attribute>
+                   <attribute name="horizontalHeaderStretchLastSection">
+                    <bool>true</bool>
+                   </attribute>
+                   <attribute name="verticalHeaderVisible">
+                    <bool>true</bool>
+                   </attribute>
+                   <column>
+                    <property name="text">
+                     <string>Cedula</string>
+                    </property>
+                   </column>
+                   <column>
+                    <property name="text">
+                     <string>Nombres</string>
+                    </property>
+                   </column>
+                   <column>
+                    <property name="text">
+                     <string>Apellidos</string>
+                    </property>
+                   </column>
+                   <column>
+                    <property name="text">
+                     <string>Edad</string>
+                    </property>
+                   </column>
+                   <column>
+                    <property name="text">
+                     <string>Sexo</string>
+                    </property>
+                   </column>
+                   <column>
+                    <property name="text">
+                     <string>Telefono</string>
+                    </property>
+                   </column>
+                   <column>
+                    <property name="text">
+                     <string>Fecha</string>
+                    </property>
+                   </column>
+                  </widget>
                  </item>
                 </layout>
                </widget>
