--- a/interfaces/paciente_view.ui
+++ b/interfaces/paciente_view.ui
@@ -108,7 +108,7 @@ background-color:gray;
            <item>
             <widget class="QFrame" name="frame_2">
              <property name="autoFillBackground">
-              <bool>true</bool>
+              <bool>false</bool>
              </property>
              <property name="styleSheet">
               <string notr="true">QFrame{
@@ -430,7 +430,7 @@ QLabel{
      <x>0</x>
      <y>0</y>
      <width>844</width>
-     <height>21</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuMenu">
